removed named ambiguity

--- a/Project/index.html
+++ b/Project/index.html
@@ -116,7 +116,7 @@
                             <li class="list-group-item">Pressione: </li>
                             <li class="list-group-item">Vento: </li>
                         </ul>
-                        <a href="weather.html" onclick="saveCity('city')"
+                        <a href="weather.html" onclick="weeklyWeather()"
                             class="btn btn-primary stretched-link">Previsioni Settimanali</a>
                     </div>
                 </div>
@@ -139,7 +139,7 @@
                                 <li class="list-group-item">Pressione: </li>
                                 <li class="list-group-item">Vento: </li>
                             </ul>
-                            <a href="weather.html" onclick="saveCity('head-milano')"
+                            <a href="weather.html" onclick="saveCity('Milano, IT')"
                                 class="btn btn-primary stretched-link">Previsioni Settimanali</a>
                         </div>
                     </div>
@@ -159,7 +159,7 @@
                                 <li class="list-group-item">Pressione: </li>
                                 <li class="list-group-item">Vento: </li>
                             </ul>
-                            <a href="weather.html" onclick="saveCity('head-londra')"
+                            <a href="weather.html" onclick="saveCity('Londra, GB')"
                                 class="btn btn-primary stretched-link">Previsioni Settimanali</a>
                         </div>
                     </div>
@@ -179,7 +179,7 @@
                                 <li class="list-group-item">Pressione: </li>
                                 <li class="list-group-item">Vento: </li>
                             </ul>
-                            <a href="weather.html" onclick="saveCity('head-tokyo')"
+                            <a href="weather.html" onclick="saveCity('Tokyo, JP')"
                                 class="btn btn-primary stretched-link">Previsioni Settimanali</a>
                         </div>
                     </div>
@@ -199,7 +199,7 @@
                                 <li class="list-group-item">Pressione: </li>
                                 <li class="list-group-item">Vento: </li>
                             </ul>
-                            <a href="weather.html" onclick="saveCity('head-ny')"
+                            <a href="weather.html" onclick="saveCity('New York, US')"
                                 class="btn btn-primary stretched-link">Previsioni Settimanali</a>
                         </div>
                     </div>
