missing '>' for w3c validation

--- a/Project/weather.html
+++ b/Project/weather.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="keywords" content="meteo, meteo live, weather, app meteo, web weather, weekly weather, meteo settimanale, hourly weather, meteo orario, precipitation map, mappa delle precipitazioni",
+    <meta name="keywords" content="meteo, meteo live, weather, app meteo, web weather, weekly weather, meteo settimanale, hourly weather, meteo orario, precipitation map, mappa delle precipitazioni">
     <meta name="description" content="Un'applicazione web per monitorare il meteo corrente, orario e settimanale di tutte le città nel mondo.">
 
     <link rel="icon" href="favicon.ico">
