added alerts pop up (modal)

--- a/Project/weather.html
+++ b/Project/weather.html
@@ -79,7 +79,7 @@
         </nav>
     </header>
 
-    <main>
+    <main id="main">
         <div class="container py-3">
             <!-- Main + search bar -->
             <div class="p-3 pb-md-4 mx-auto text-center">
