--- a/Project/index.html
+++ b/Project/index.html
@@ -74,26 +74,7 @@
         </nav>
     </header>
 
-    <main>
-
-        <!-- Modal -->
-        <div class="modal fade" id="alertPopUp" tabindex="-1" aria-labelledby="alertPopUpLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="alertPopUpLabel">Modal title</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <!-- qui genero la descrizione dell'alert cliccato -->
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
+    <main id="main">
         <div class="container py-3">
             <!-- Main + search bar -->
             <div class="p-3 pb-md-4 mx-auto text-center">
@@ -153,8 +134,7 @@
                             <p class="card-text">data</p>
                             <img src="images/missing_image.png" alt="missing image" class="card-img-top">
                             <h5 class="card-title">meteo(es. nuvoloso)</h5>
-                            <div id="alert-milano" class="badge rounded-pill text-dark" data-bs-toggle="modal"
-                                data-bs-target="#alertPopUp"></div>
+                            <div id="alert-milano" class="badge rounded-pill text-dark"></div>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">Umidità: </li>
                                 <li class="list-group-item">Pressione: </li>
