added accordion-like feature, added aria attribute

--- a/Project/weather.html
+++ b/Project/weather.html
@@ -136,16 +136,16 @@
                 </div>
 
 
-                <div class="row-col text-center py-4">
+                <div id="daysWeather" class="row-col text-center py-4">
                     <h2 class="text-center">Meteo dei 7 giorni successivi</h2>
                     <div class="row-col py-3">
                         <div class="card">
                             <div class="card-header">
-                                <a data-bs-toggle="collapse" href="#giorno1">
+                                <a data-bs-toggle="collapse" href="#giorno1" aria-expanded="false" aria-controls="giorno1">
                                     <h5 class="text-center" id="g1">Meteo Domani</h5>
                                 </a>
                             </div>
-                            <div class="collapse card-body pt-0" id="giorno1">
+                            <div class="collapse card-body pt-0" data-bs-parent="#daysWeather" id="giorno1">
                                 <div class="row pt-2">
                                     <div
                                         class="giornata-white-space col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
@@ -184,11 +184,11 @@
                     <div class="row-col py-3">
                         <div class="card">
                             <div class="card-header">
-                                <a data-bs-toggle="collapse" href="#giorno2">
+                                <a data-bs-toggle="collapse" href="#giorno2" aria-expanded="false" aria-controls="giorno2">
                                     <h5 class="text-center" id="g2">Meteo Domani</h5>
                                 </a>
                             </div>
-                            <div class="collapse card-body pt-0" id="giorno2">
+                            <div class="collapse card-body pt-0" data-bs-parent="#daysWeather" id="giorno2">
                                 <div class="row pt-2">
                                     <div
                                         class="giornata-white-space col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
@@ -227,11 +227,11 @@
                     <div class="row-col py-3">
                         <div class="card">
                             <div class="card-header">
-                                <a data-bs-toggle="collapse" href="#giorno3">
+                                <a data-bs-toggle="collapse" href="#giorno3" aria-expanded="false" aria-controls="giorno3">
                                     <h5 class="text-center" id="g3">Meteo Domani</h5>
                                 </a>
                             </div>
-                            <div class="collapse card-body pt-0" id="giorno3">
+                            <div class="collapse card-body pt-0" data-bs-parent="#daysWeather" id="giorno3">
                                 <div class="row pt-2">
                                     <div
                                         class="giornata-white-space col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
@@ -270,11 +270,11 @@
                     <div class="row-col py-3">
                         <div class="card">
                             <div class="card-header">
-                                <a data-bs-toggle="collapse" href="#giorno4">
+                                <a data-bs-toggle="collapse" href="#giorno4" aria-expanded="false" aria-controls="giorno4">
                                     <h5 class="text-center" id="g4">Meteo Domani</h5>
                                 </a>
                             </div>
-                            <div class="collapse card-body pt-0" id="giorno4">
+                            <div class="collapse card-body pt-0" data-bs-parent="#daysWeather" id="giorno4">
                                 <div class="row pt-2">
                                     <div
                                         class="giornata-white-space col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
@@ -313,11 +313,11 @@
                     <div class="row-col py-3">
                         <div class="card">
                             <div class="card-header">
-                                <a data-bs-toggle="collapse" href="#giorno5">
+                                <a data-bs-toggle="collapse" href="#giorno5" aria-expanded="false" aria-controls="giorno5">
                                     <h5 class="text-center" id="g5">Meteo Domani</h5>
                                 </a>
                             </div>
-                            <div class="collapse card-body pt-0" id="giorno5">
+                            <div class="collapse card-body pt-0" data-bs-parent="#daysWeather" id="giorno5">
                                 <div class="row pt-2">
                                     <div
                                         class="giornata-white-space col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
@@ -356,11 +356,11 @@
                     <div class="row-col py-3">
                         <div class="card">
                             <div class="card-header">
-                                <a data-bs-toggle="collapse" href="#giorno6">
+                                <a data-bs-toggle="collapse" href="#giorno6" aria-expanded="false" aria-controls="giorno6">
                                     <h5 class="text-center" id="g6">Meteo Domani</h5>
                                 </a>
                             </div>
-                            <div class="collapse card-body pt-0" id="giorno6">
+                            <div class="collapse card-body pt-0" data-bs-parent="#daysWeather" id="giorno6">
                                 <div class="row pt-2">
                                     <div
                                         class="giornata-white-space col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
@@ -399,11 +399,11 @@
                     <div class="row-col py-3">
                         <div class="card">
                             <div class="card-header">
-                                <a data-bs-toggle="collapse" href="#giorno7">
+                                <a data-bs-toggle="collapse" href="#giorno7" aria-expanded="false" aria-controls="giorno7">
                                     <h5 class="text-center" id="g7">Meteo Domani</h5>
                                 </a>
                             </div>
-                            <div class="collapse card-body pt-0" id="giorno7">
+                            <div class="collapse card-body pt-0" data-bs-parent="#daysWeather" id="giorno7">
                                 <div class="row pt-2">
                                     <div
                                         class="giornata-white-space col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
