modified shadows and on hover

--- a/Project/index.html
+++ b/Project/index.html
@@ -103,7 +103,7 @@
 
             <!-- card città inserita dall'utente -->
             <div id="hidden-card" class="p-3 text-center">
-                <div id="hidden-card-intern" class="card mx-auto">
+                <div id="hidden-card-intern" class="clickable-card card mx-auto">
                     <div class="card-header py-3">
                         <h4 id="city" class="my-0 f2-normal">Città Inserita</h4>
                     </div>
@@ -126,7 +126,7 @@
             <!-- card città principali -->
             <div class="p-3 row row-cols-1 row-cols-xxl-4 row-cols-lg-3 row-cols-md-2 mb-2 mt-4 text-center">
                 <div class="col pt-3">
-                    <div class="card-sizing card mx-auto">
+                    <div class="clickable-card card-sizing card mx-auto">
                         <div class="card-header py-3">
                             <h4 id="head-milano" class="my-0 f2-normal">Milano, IT</h4>
                         </div>
@@ -146,7 +146,7 @@
                     </div>
                 </div>
                 <div class="col pt-3">
-                    <div class="card-sizing card mx-auto">
+                    <div class="clickable-card card-sizing card mx-auto">
                         <div class="card-header py-3">
                             <h4 id="head-londra" class="my-0 f2-normal">Londra, GB</h4>
                         </div>
@@ -166,7 +166,7 @@
                     </div>
                 </div>
                 <div class="col pt-3">
-                    <div class="card-sizing card mx-auto">
+                    <div class="clickable-card card-sizing card mx-auto">
                         <div class="card-header py-3">
                             <h4 id="head-tokyo" class="my-0 f2-normal">Tokyo, JP</h4>
                         </div>
@@ -186,7 +186,7 @@
                     </div>
                 </div>
                 <div class="col pt-3">
-                    <div class="card-sizing card mx-auto">
+                    <div class="clickable-card card-sizing card mx-auto">
                         <div class="card-header py-3">
                             <h4 id="head-ny" class="my-0 f2-normal">New York, US</h4>
                         </div>
@@ -210,7 +210,7 @@
             <hr class="divider">
 
             <!-- form per suggerimento aggiunta città -->
-            <div class="contact-me mt-4 card mx-auto">
+            <div class="shadow contact-me mt-4 card mx-auto">
                 <div class="card-header text-center">
                     <h3>Contattami</h3>
                     <p>Puoi anche suggerirmi delle città da aggiungere in homepage.</p>
