--- a/Project/weather.html
+++ b/Project/weather.html
@@ -104,8 +104,8 @@
                 </ul>
             </div>
 
-            <div class="container mt-4">
-                <div class="card text-center">
+            <div class="container mt-5">
+                <div class="card text-center shadow">
                     <div class="card-header">
                         <h4 class="my-0 f2-normal">Meteo Corrente</h4>
                     </div>
@@ -127,7 +127,7 @@
                     </div>
                 </div>
 
-                <div id="today-card" class="card text-center mt-3">
+                <div id="today-card" class="card text-center shadow my-5">
                     <div class="card-header">
                         <h4 class="my-0 f2-normal">Meteo di Oggi (ogni ora)</h4>
                     </div>
@@ -139,7 +139,7 @@
                 <div id="daysWeather" class="row-col text-center py-4">
                     <h2 class="text-center">Meteo dei 7 giorni successivi</h2>
                     <div class="row-col py-3">
-                        <div class="card">
+                        <div class="clickable-card card">
                             <div class="card-header">
                                 <a data-bs-toggle="collapse" href="#giorno1" aria-expanded="false" aria-controls="giorno1">
                                     <h5 class="text-center" id="g1">Meteo Domani</h5>
@@ -182,7 +182,7 @@
                         </div>
                     </div>
                     <div class="row-col py-3">
-                        <div class="card">
+                        <div class="clickable-card card">
                             <div class="card-header">
                                 <a data-bs-toggle="collapse" href="#giorno2" aria-expanded="false" aria-controls="giorno2">
                                     <h5 class="text-center" id="g2">Meteo Domani</h5>
@@ -225,7 +225,7 @@
                         </div>
                     </div>
                     <div class="row-col py-3">
-                        <div class="card">
+                        <div class="clickable-card card">
                             <div class="card-header">
                                 <a data-bs-toggle="collapse" href="#giorno3" aria-expanded="false" aria-controls="giorno3">
                                     <h5 class="text-center" id="g3">Meteo Domani</h5>
@@ -268,7 +268,7 @@
                         </div>
                     </div>
                     <div class="row-col py-3">
-                        <div class="card">
+                        <div class="clickable-card card">
                             <div class="card-header">
                                 <a data-bs-toggle="collapse" href="#giorno4" aria-expanded="false" aria-controls="giorno4">
                                     <h5 class="text-center" id="g4">Meteo Domani</h5>
@@ -311,7 +311,7 @@
                         </div>
                     </div>
                     <div class="row-col py-3">
-                        <div class="card">
+                        <div class="clickable-card card">
                             <div class="card-header">
                                 <a data-bs-toggle="collapse" href="#giorno5" aria-expanded="false" aria-controls="giorno5">
                                     <h5 class="text-center" id="g5">Meteo Domani</h5>
@@ -354,7 +354,7 @@
                         </div>
                     </div>
                     <div class="row-col py-3">
-                        <div class="card">
+                        <div class="clickable-card card">
                             <div class="card-header">
                                 <a data-bs-toggle="collapse" href="#giorno6" aria-expanded="false" aria-controls="giorno6">
                                     <h5 class="text-center" id="g6">Meteo Domani</h5>
@@ -397,7 +397,7 @@
                         </div>
                     </div>
                     <div class="row-col py-3">
-                        <div class="card">
+                        <div class="clickable-card card">
                             <div class="card-header">
                                 <a data-bs-toggle="collapse" href="#giorno7" aria-expanded="false" aria-controls="giorno7">
                                     <h5 class="text-center" id="g7">Meteo Domani</h5>
