added 'enter' support on search box

--- a/Project/weather.html
+++ b/Project/weather.html
@@ -6,8 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="keywords" content="meteo, meteo live, weather, app meteo, web weather, weekly weather, meteo settimanale, hourly weather, meteo orario, precipitation map, mappa delle precipitazioni">
-    <meta name="description" content="Un'applicazione web per monitorare il meteo corrente, orario e settimanale di tutte le città nel mondo.">
+    <meta name="keywords"
+        content="meteo, meteo live, weather, app meteo, web weather, weekly weather, meteo settimanale, hourly weather, meteo orario, precipitation map, mappa delle precipitazioni">
+    <meta name="description"
+        content="Un'applicazione web per monitorare il meteo corrente, orario e settimanale di tutte le città nel mondo.">
 
     <link rel="icon" href="favicon.ico">
 
@@ -94,7 +96,7 @@
                         aria-label="Search" />
                     <label for="floatingInput">es. Milano, IT</label>
                 </div>
-                <button type="button" class="btn btn-outline-primary flex-shrink-0"
+                <button id="searchBtn" type="button" class="btn btn-outline-primary flex-shrink-0"
                     onclick="suggestion()">search</button>
                 <button type="button" class="btn btn-outline-secondary flex-shrink-0" onclick="getLocation()"><img
                         src="images/location.png" alt="posizione"></button>
@@ -141,7 +143,8 @@
                     <div class="row-col py-3">
                         <div class="clickable-card card">
                             <div class="card-header">
-                                <a data-bs-toggle="collapse" href="#giorno1" aria-expanded="false" aria-controls="giorno1">
+                                <a data-bs-toggle="collapse" href="#giorno1" aria-expanded="false"
+                                    aria-controls="giorno1">
                                     <h5 class="text-center" id="g1">Meteo Domani</h5>
                                 </a>
                             </div>
@@ -184,7 +187,8 @@
                     <div class="row-col py-3">
                         <div class="clickable-card card">
                             <div class="card-header">
-                                <a data-bs-toggle="collapse" href="#giorno2" aria-expanded="false" aria-controls="giorno2">
+                                <a data-bs-toggle="collapse" href="#giorno2" aria-expanded="false"
+                                    aria-controls="giorno2">
                                     <h5 class="text-center" id="g2">Meteo Domani</h5>
                                 </a>
                             </div>
@@ -227,7 +231,8 @@
                     <div class="row-col py-3">
                         <div class="clickable-card card">
                             <div class="card-header">
-                                <a data-bs-toggle="collapse" href="#giorno3" aria-expanded="false" aria-controls="giorno3">
+                                <a data-bs-toggle="collapse" href="#giorno3" aria-expanded="false"
+                                    aria-controls="giorno3">
                                     <h5 class="text-center" id="g3">Meteo Domani</h5>
                                 </a>
                             </div>
@@ -270,7 +275,8 @@
                     <div class="row-col py-3">
                         <div class="clickable-card card">
                             <div class="card-header">
-                                <a data-bs-toggle="collapse" href="#giorno4" aria-expanded="false" aria-controls="giorno4">
+                                <a data-bs-toggle="collapse" href="#giorno4" aria-expanded="false"
+                                    aria-controls="giorno4">
                                     <h5 class="text-center" id="g4">Meteo Domani</h5>
                                 </a>
                             </div>
@@ -313,7 +319,8 @@
                     <div class="row-col py-3">
                         <div class="clickable-card card">
                             <div class="card-header">
-                                <a data-bs-toggle="collapse" href="#giorno5" aria-expanded="false" aria-controls="giorno5">
+                                <a data-bs-toggle="collapse" href="#giorno5" aria-expanded="false"
+                                    aria-controls="giorno5">
                                     <h5 class="text-center" id="g5">Meteo Domani</h5>
                                 </a>
                             </div>
@@ -356,7 +363,8 @@
                     <div class="row-col py-3">
                         <div class="clickable-card card">
                             <div class="card-header">
-                                <a data-bs-toggle="collapse" href="#giorno6" aria-expanded="false" aria-controls="giorno6">
+                                <a data-bs-toggle="collapse" href="#giorno6" aria-expanded="false"
+                                    aria-controls="giorno6">
                                     <h5 class="text-center" id="g6">Meteo Domani</h5>
                                 </a>
                             </div>
@@ -399,7 +407,8 @@
                     <div class="row-col py-3">
                         <div class="clickable-card card">
                             <div class="card-header">
-                                <a data-bs-toggle="collapse" href="#giorno7" aria-expanded="false" aria-controls="giorno7">
+                                <a data-bs-toggle="collapse" href="#giorno7" aria-expanded="false"
+                                    aria-controls="giorno7">
                                     <h5 class="text-center" id="g7">Meteo Domani</h5>
                                 </a>
                             </div>
