--- a/Project/index.html
+++ b/Project/index.html
@@ -91,7 +91,7 @@
                         aria-label="Search" />
                     <label for="floatingInput">es. Milano, IT</label>
                 </div>
-                <button type="button" class="btn btn-outline-primary flex-shrink-0"
+                <button id="searchBtn" type="button" class="btn btn-outline-primary flex-shrink-0"
                     onclick="suggestion()">search</button>
                 <button type="button" class="btn btn-outline-secondary flex-shrink-0" onclick="getLocation()"><img
                         src="images/location.png" alt="posizione"></button>
